Fixed two css issues.  Word breaks on skills/experience page and text centering on projects page.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -251,6 +251,7 @@ a {
     white-space: pre-wrap;
     font: inherit;
     font-size: 20px;
+    word-break: keep-all;
 }
 
 .icons img {
@@ -370,6 +371,7 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .project-overlay p {
